fixed bug where admin dropdown z-index wasn't working

--- a/less/new.less
+++ b/less/new.less
@@ -1060,7 +1060,6 @@ h4.mission {
 	position: relative;
 	margin-left:0px;
 	padding-top: 10px;
-    z-index:0;
 }
 
 #timestampAndEditLink {
